Tweak homepage layout, hopefully fix old iOS
On old iOS the homepage screenshots were too high on the page (covering
the title and menu).  Attempt to fix this by mostly eliminating z-index,
and using position: relative.

--- a/layouts/partials/scss/real-scss/homepage.scss
+++ b/layouts/partials/scss/real-scss/homepage.scss
@@ -35,20 +35,22 @@
     list-style: none outside;
     margin: 0;
     padding: 0;
+    position: relative;
 
     &:nth-child(odd) {
       transform: rotate(-3deg);
-      z-index: 8;
     }
 
     &:nth-child(even) {
       transform: rotate(5deg);
+    }
+
+    &:nth-child(2) {
       z-index: 8;
     }
 
     &:nth-child(3) {
       transform: translate(0, -60%) rotate(3deg);
-      z-index: 7;
     }
 
     &:nth-child(4) {
